Initial commit of COVID-19 Dashboard by Manjot Singh

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,13 @@
-streamlit>=1.46.0
-pandas>=2.3.0
-numpy>=2.2.6
-plotly>=6.1.2
-openpyxl>=3.1.5 
+streamlit
+pandas
+numpy
+plotly
+statsmodels
+prophet
+seaborn
+matplotlib
+st-aggrid
+reportlab
+openpyxl
+pillow
+kaleido
