--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,12 @@
-streamlit
-pandas
-numpy
-plotly
-statsmodels
-prophet
-st-aggrid
-reportlab
-openpyxl
-pillow
-kaleido
-seaborn
-matplotlib
+streamlit==1.33.1
+pandas==2.1.1
+numpy==1.26.2
+plotly==5.20.0
+statsmodels==1.2.1
+prophet==1.1.4
+seaborn==0.12.2
+matplotlib==3.8.0
+openpyxl==3.1.2
+kaleido==0.2.1
+Pillow==10.0.0
+reportlab==4.0.3
